# Mac_Wi-Fi_Connect_CLI

./: CMakeLists.txt  readme.md
include/communication/: tcp.h
include/wifi_direct/: command_handler.h  network_info.h  wifi_manager.h
python/: wifi_direct.py
scripts/: scan_wifi.swift
src/: command_handler.cpp  main.cpp  tcp.cpp  wifi_manager.cpp
